--- a/src/fabio.scss
+++ b/src/fabio.scss
@@ -1,3 +1,11 @@
+$bgc-viola: #960e3b;
+$bgc-blue: #3a5664;
+
+$bgc-relax: #88abae;
+$bgc-cultura: #690e3b;
+$bgc-ristorazione: #d49e55;
+$bgc-arte: #667384;
+
 /* reset css */
 * {
     margin: 0;
@@ -10,9 +18,12 @@
     font-family: 'Comfortaa', cursive;
     font-size: 16px;
     font-weight: lighter;
-    text-transform: uppercase;
     text-align: center;
     height: 100%;
+}
+h1, h2{
+
+    text-transform: uppercase;
 }
 
     .center-input {
@@ -23,12 +34,12 @@
         border-bottom: 1px solid #2d2d2d;
         line-height: 2.5em;
         background-color: #fff;
-        color: $bgc-verde;
+        color: $bgc-blue;
         font-family: 'Comfortaa', cursive;
 
         &::placeholder {
             opacity: 0;
-            color: $bgc-verde;
+            color: $bgc-blue;
         }
 
         &:focus~label,
@@ -56,7 +67,7 @@
         left: calc(0.5rem + 5px);
         transform: translateY(-50%);
         transition: all 0.3s ease;
-        color: $bgc-verde;
+        color: $bgc-blue;
     }
 
 
@@ -71,7 +82,7 @@
 }
 
 /* menu navigazione */
-.logo {
+.logo, li {
     display: flex;
     justify-content: center;
     height: 100px;
@@ -100,9 +111,12 @@ nav {
         justify-content: space-around;
         padding: 10px;
         list-style: none;
+        
+        background-color: $bgc-blue;
 
 
         .menu-item {
+            margin: auto;
             text-decoration: none;
             color: #fff;
             padding: 1.375em .4em;
@@ -124,9 +138,10 @@ nav {
 }
 
 #uno {
-    background-image: url(./img/sfondo.jpg);
-    background-size: cover;
-    background-position: center center;
+    // background-image: url(./img/sfondo.jpg);
+    // background-size: cover;
+    // background-position: center center;
+    background-color: $bgc-blue;
     color: #fff;
     height: 100vh;
     overflow: hidden;
@@ -150,8 +165,21 @@ nav {
         margin: 4em;
         color: black;
         &:hover {
-            color: darken($color: $bgc-verde, $amount: 10)
+            color: darken($color: $bgc-blue, $amount: 10)
         }
+    }
+
+    .bigger {
+        font-size: 1.2em;
+        font-weight: 500;
+    }
+    button {
+        text-transform: uppercase;
+        font-size: 1em;
+        padding: 1em 1.5em;
+        border: 1px solid transparent;
+        color: white;
+        background-color: $bgc-blue;
     }
 }
 .text-area-big {
@@ -165,13 +193,13 @@ nav {
         line-height: 1.5em;
     }
     h1, h2, h3 {
-        color: $bgc-verde;
+        color: $bgc-blue;
     }
     a {
         // margin: 4em;
-        color: $bgc-verde;
+        color: $bgc-blue;
         &:hover {
-            color: darken($color: $bgc-verde, $amount: 10);
+            color: darken($color: $bgc-blue, $amount: 10);
             animation: moving-arrow  1s ease infinite ;
         }
     }
@@ -284,7 +312,7 @@ section a {
     &.verde {
         &:hover {
             &:before {
-                background-color: rgba($bgc-verde, .5em);
+                background-color: rgba($bgc-blue, .5em);
             }
         }
     }
@@ -381,25 +409,55 @@ section a {
     flex-direction: column;
     align-items: center;
 }
+#slogan {
+    background-image: url(./img/sfondo.jpg);
+    background-position: center center;
+    background-size: cover;
+    width: 100%;
+    height: 50vh;
+    .content {
+        padding: 4em ;
+        width: 300px;
+        margin: auto;
+        font-size: 1.5em;
+        line-height: 1.6em;
+        text-align: left;
+    }
+    h3 {
+        text-transform: uppercase;
+        color: white;
+    }
+}
 
 /* fine punti vendita */
 /* footer */
 #footer {
     height: 50vh;
-    background-image: url(./img/sfondo.jpg);
-    background-position: center center;
-    background-size: cover;
+    // background-image: url(./img/sfondo.jpg);
+    // background-position: center center;
+    // background-size: cover;
+    background-color: $bgc-blue;
     display: flex;
     align-items: center;
     padding: 1.357em 10%;
+    .logo {
+        display: flex;
+        flex-direction: column;
+        color: white;
+        h1 {
+            padding: .5em;
+        }
+    }
 }
 
 #footer div {
     flex-grow: 1;
-    &:first-child {
-        text-align: left;
-    }
+    align-items: center;
     text-align: right;
+    &.menu ul li{
+        text-align: left !important;
+    }
+    
 }
 
 #footer ul li {
@@ -410,10 +468,10 @@ section a {
     justify-content: flex-start;
     li {
         margin: 1em .5em;
-        width: 25px;
-    height: 25px;
-    background-color: #fff;
-    border-radius: 50%;
+    //     width: 25px;
+    // height: 25px;
+    // background-color: #fff;
+    // border-radius: 50%;
     }
     
 }
@@ -421,6 +479,7 @@ section a {
 #footer li,
 #footer p,
 #footer a {
+    height: auto;
     line-height: 2em;
     color: #fff;
 }
