--- a/src/fabio.scss
+++ b/src/fabio.scss
@@ -27,11 +27,22 @@ h2 {
 
     text-transform: uppercase;
 }
+
 .bgc-blue {
     background-color: $bgc-blue;
+    color: white !important;
 }
+
 .tac {
     text-align: center;
+}
+
+.flex {
+    display: flex;
+}
+
+.w-100 {
+    width: 100%;
 }
 
 .center-input {
@@ -171,14 +182,27 @@ nav {
     padding: 1em 2em;
 }
 
+.info-bot {
+    flex-grow: 1;
+    .bottiglia-centro {
+        position: absolute;
+        transform: translateX(-50%);
+        img {
+            width: 100%;
+        }
+       
+    }
+}
+
 .text-area {
     padding: 4em;
     color: #000;
 
     h1,
+    h2,
     p {
         padding: .375em 2em;
-        color: #2d2d2d;
+        // color: #2d2d2d;
         line-height: 1.5em;
     }
 
@@ -273,22 +297,26 @@ section a {
     cursor: pointer;
 }
 
-.flex {
-    display: flex;
-}
+
 .logo-home {
-    
+
     padding: .5em;
     margin: 9em;
     width: 50%;
     background-color: #fff;
     border-radius: 50%;
     margin-bottom: 0;
-    padding-bottom:0; 
+    padding-bottom: 0;
 }
+
 .half {
     width: 50%;
+
+    img {
+        width: 50%;
+    }
 }
+
 .half-hover {
     width: 50%;
     // height: 100vh;
@@ -376,10 +404,12 @@ section a {
         transform: translate(-50%, -50%);
         font-size: 2em;
     }
+
     &.logo {
         background-color: $bgc-blue;
         padding: 1em;
         height: auto;
+
         img {
             width: 100%;
             height: 100%;
@@ -420,7 +450,7 @@ section a {
     margin: 0 2em 2em;
 
     img {
-        
+
         height: 250px;
     }
 }
@@ -436,9 +466,6 @@ section a {
     height: 80vh;
 }
 
-.nero {
-    color: #000;
-}
 
 .margine {
     padding: 40px 0;
